# Code-Audit-AI-Agent

./: README.md  pyproject.toml  requirements.txt  setup.py
code-audit-ai-agent/: CONTRIBUTING.md  Makefile
code-audit-ai-agent/code_audit_ai_agent/: __init__.py  auditor.py
code-audit-ai-agent/code_audit_ai_agent/agent/: anthropic_agent.py  base.py  mimo_agent.py
code-audit-ai-agent/code_audit_ai_agent/github/: __init__.py  client.py
code-audit-ai-agent/code_audit_ai_agent/scanner/: style.py
code-audit-ai-agent/code_audit_ai_agent/utils/: __init__.py  config.py
code-audit-ai-agent/tests/: test_scanner.py
code_audit_ai_agent/: __main__.py
code_audit_ai_agent/agent/: __init__.py  openai_agent.py
code_audit_ai_agent/scanner/: __init__.py  performance.py  security.py
code_audit_ai_agent/utils/: logger.py
examples/: demo.py  example_bugs.py
